--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><base href="https://itz-ashlynn.github.io/AVA/"><title>GPT-4o AI Chat - Powered by OpenAI's Knowledge</title> <link rel="icon" type="image/png" href="https://iili.io/2nNV2I4.png">
+<html><head><base href="https://chatgpt-tellycloud.pages.dev/ChatGPT/"><title>GPT-4o AI Chat - Powered by OpenAI's Knowledge</title> <link rel="icon" type="image/png" href="https://iili.io/2nNV2I4.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&display=swap');
