--- a/devlopment.html
+++ b/devlopment.html
@@ -1,4 +1,4 @@
-<html><head><base href="https://chatgpt-tellycloud.pages.dev/ChatGPT/" />
+<html><head><base href="https://chatgpt-tellycloud.pages.dev/2ChatGPT/" />
 <meta name="description" content="Comprehensive guide to deploy a ChatGPT bot on Cloudflare Workers. Step-by-step instructions for easy setup."> 
 <title>Cloudflare Workers ChatGPT Bot Codes</title>
 <link rel="icon" href="https://ar-hosting.pages.dev/1731870246454.jpg" type="image/png">
