--- a/07EBA5.html
+++ b/07EBA5.html
@@ -1,7 +1,7 @@
-<html><head><base href="https://ashlynn-repo.tech/">
+<html><head><base href="https://tellycloud-about.tech/">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ASHLYNNFLIX - Stream Online</title>
+<title>TELLYCLOUD MOVIES - Stream Online</title>
 
 <style>
   :root {
@@ -458,7 +458,7 @@
 <body>
 
 <nav class="navbar">
-  <a href="https://t.me/Ashlynn_Repository" class="logo">ASHLYNNFLIX</a>
+  <a href="https://t.me/TellYCloud_bots" class="logo">TELLYCLOUD MOVIES</a>
   <div class="search-container">
     <input type="search" class="search-bar" placeholder="Search movies...">
     <div class="search-results"></div>
